# RTI_LABO

./: CMakeLists.txt  Makefile  README.md  client  client.cpp  clientTestServeurEncodage  clientTestServeurEncodage.cpp  makefile  server_config.txt  serveur  serveur.cpp  serveurEncodage  serveurEncodage.cpp
BD_Books/: CreationBD  CreationBD.cpp
ClientBookEncoderQt/: CMakeLists.txt  FichierClientCPP  FichierClientH  main.cpp  mainwindowclientbookencoder.cpp  mainwindowclientbookencoder.h  makefile  moc_mainwindowclientbookencoder.cpp  ui_mainwindowclientbookencoder.h
Librairies/: BdBooks.cpp  BdBooks.h  TestBdBooks  TestBdBooks.cpp  clientTest  clientTest.cpp  makefile  serveurTest  serveurTest.cpp  socket.cpp  socket.h
Protocole/: Prot_OBEP.cpp  Prot_OBEP.h
buildTestOBEP/: CMakeCache.txt  Makefile  client  cmake_install.cmake  serveur
